scss/modules/_nav.scss
@use "sass:map";

$navColors: (
  "a.software": $software-color,
  "a.support": $support-color,
  "a.marketing": $marketing-color,
  "a.services": $services-color,
  "a.design": $design-color,
  "a.security": $security-color,
  "a.course": $training-color
);

$navBgColors: (
  "a.software": $software-bg-color,
  "a.support": $support-bg-color,
  "a.marketing": $marketing-bg-color,
  "a.services": $services-bg-color,
  "a.design": $design-bg-color,
  "a.security": $security-bg-color,
  "a.course": $course-bg-color
);

.topbar{
    padding: 20px 0;
}

.topbar-links{
    display:flex;
    justify-content: flex-end;
    padding: 7px 0;
}

.topbar-links a{
    margin-right: 15px;
}

.btn{
    display: inline-flex;
}

.btn-search-input .input-field{
    height:54px;
    padding: 5px 60px 5px 15px;
}

.btn-search-input .btn{
    margin-left: -66px;
    box-shadow: none;
    padding: 17px 21px;
}

.btn-search i, .btn-search-input i, .btn-call i{
    margin-right:0;
}

.btn-call {
    margin-right: 0 !important;
    & i{
        font-size:1.65rem;
    }
}

.btn-toggle{
    padding: 18px 15px;
    margin-right: 0 !important;
}


.navibar{ 
    background-color: $primary-color;
    display:none;
}

.nav{
    display: flex;
    justify-content: space-around;
    padding:0;
    margin:0;
}

.nav__item{
    flex: 1 0;
    text-align:center;
    list-style:none;
}

.nav__item a{
    position:relative;
    display: block;
    padding: 18px 0;
    text-transform: uppercase;
    color: $white;
    font-size: 1.15rem;
    line-height: 1rem;
}

.nav__item small{
    font-size: 0.65rem;
}

.nav__item i{
    font-size: 1.25rem;
    margin-bottom: 10px;
}

@each $className, $color in $navColors {
    #{$className} i{    
        color: #{$color};       
    }

    #{$className}:hover{
        background-color: $color;
        & i{
            color: $white;
        }  
    }


    //nav triangle
    #{$className}:hover::before{
        @include triangle($color, 92.57px);
        position: absolute;
        bottom:-35px;
        left:0;
    }


    #{$className}:hover + .mega-menu{
        display:block;
    }

}

@each $className, $color in $navBgColors {
    #{$className} + .mega-menu{
        position: absolute;
        display: none;
        background-color: $color;
        width: 100%;
        left: 0;
        padding: 50px;
    }
}

.nav__item .mega-menu{
    color: $white;
    text-align:left;

    & .sub-menu{
        margin-top:20px;        
        padding-left: 0;
        font-size: 1.2rem;
        list-style:none;

        & li{
            & a{
                text-transform: capitalize;                
                padding: 0.625rem 0.938rem 0.625rem 0;

                &:hover{
                    text-decoration: underline;
                }
            }

            & i{
                margin-right: 10px;
            }          
        }
    }
}

.searchbar{
    display:block;
}

.searchbar .keyword{
    width: 100%;
    height:47px;
    padding: 5px 40px 5px 15px;
    background-color: rgba(0,0,0,.1);
    outline: 1px solid hsla(0,0%,100%,.2);
    border: 2px solid rgba(0,0,0,.1);
    border-radius: 2px;
    box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);
    font-size: 14px;
    line-height: 1.42857143;
    color: #555;
    margin-bottom:20px;
}

.searchbar .btn{
    float: right;
    margin-top: -67px;
    background: none;
    color: $primary-color;
    padding: 14px 15px;
}

.searchbar .btn i{
    margin-right:0;
}

@media (min-width: map.get($breakpoints, "xs")) {
    .topbar{
        padding-bottom:10px;
    }
    .topbar-links{
        & .btn-support, & .btn-contact, & .btn-search, & .btn-search-input{
            display:none;
        }
    }    
}    

@media (min-width: map.get($breakpoints, "md")) {
    .searchbar{
        display:none ;
    }

    .topbar-links {
        & .btn-search-input{
            display:block;
        }
        & .btn-call{
            display:none;
        }
    }
}

@media (min-width: map.get($breakpoints, "lg")) {
    .topbar{
        padding-bottom:20px;
    }
    .topbar-links{
        & .btn-support, & .btn-contact, & .btn-search{
            display:block;
        }

        & .btn-search-input{
            display:none;
        }
    }

    .navibar{
        display:block;
    }
    $size : ((map.get($navWidths, "lg") / 7) / 2 ) + 0px;
    .nav__item a:hover::before{
        @include triangle(null, $size);

    }
}

@media (min-width: map.get($breakpoints, "xl")) {
    $size : ((map.get($navWidths, "xl") / 7) / 2 ) + 0px;
    .nav__item a:hover::before{
        @include triangle(null, $size);
    }

    .topbar-links {
        & .btn-search-input{
            display:block;
        }
        
        & .btn-search{
            display: none;
        }
    }
}


@media (min-width: map.get($breakpoints, "xxl")) {
    $size : ((map.get($navWidths, "xxl") / 7) / 2 ) + 0px;
    .nav__item a:hover::before{
        @include triangle(null, $size);
    }
}

